--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,9 @@
     "autoload": {
         "psr-0": { "Broda\\": "src/" }
     },
+    "autoload-dev": {
+        "psr-0": { "Broda\\Tests\\": "tests/" }
+    },
     "archive": {
         "exclude": ["!vendor", "tests", "*phpunit.xml", ".travis.yml", "build.xml", "build.properties", "composer.phar"]
     }
