--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "symfony/validator": "~2.5",
         "symfony/security": "~2.5",
         "symfony/serializer": "~2.5",
+        "symfony/property-access": "~2.5",
         "symfony/expression-language": "~2.5",
         "sensio/framework-extra-bundle": "~3.0",
 
