--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "monolog/monolog": ">=1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4"
+        "phpunit/phpunit": "~4",
+        "gedmo/doctrine-extensions": "~2.3"
     },
     "autoload": {
         "psr-0": { "Broda\\": "src/" }
