--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "monolog/monolog": ">=1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4",
+        "phpunit/phpunit": "dev-master",
+        "phpunit/php-code-coverage": "3.0.*@dev",
         "gedmo/doctrine-extensions": "~2.3"
     },
     "autoload": {
