--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/serializer": "~2.5",
         "symfony/property-access": "~2.5",
         "symfony/expression-language": "~2.5",
+        "symfony/form": "~2.5",
         "sensio/framework-extra-bundle": "~3.0",
 
         "twig/twig": "~1.15",
